[project]
name = "pushup_page"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andy963", email = "Andy963@users.noreply.github.com"},
]
dependencies = ["arrow>=1.3.0", "stravalib>=2.4", "sqlalchemy>=2.0.43", "dotenv>=0.9.9"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
