[project]
name = "pushup_page"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andy963", email = "Andy963@users.noreply.github.com"},
]
dependencies = ["arrow>=1.3.0", "stravalib>=2.4", "sqlalchemy>=2.0.43", "dotenv>=0.9.9", "svgwrite>=1.4.3", "colour>=0.1.5", "s2sphere>=0.2.5", "timezonefinder>=8.0.0", "gpxpy>=1.6.2", "polyline>=2.0.3", "black>=25.1.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
sync = "python -m pushup_page.strava_sync"
